# micro-service-in-rust-python

./: .gitignore  Makefile  README.md
msd_python/: main.py  requirements.txt
msd_python/repo/: crud.py  database.py  models.py  schemas.py  util.py
msd_rust/: Cargo.toml  Makefile
msd_rust/migrations/2020-05-05-004711_create_instrument/: down.sql  up.sql
msd_rust/migrations/2020-05-05-050446_create_quote/: down.sql  up.sql
msd_rust/src/: crud.rs  database.rs  date_helpers.rs  main.rs  models.rs  schema.rs
