[package]
name = "msd_rust"
version = "0.1.0"
authors = ["Julio Barros <Julio@E-String.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.9.0"
listenfd = "0.3"
log = "0.4"
env_logger = "0.7.1"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0.106", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2"]}
reqwest = { version = "0.10", features = ["json", "blocking"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"